Fix Spacing

--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,8 @@
 }
 
 .video-title {
-  margin-bottom:0
+  margin-bottom: 0;
+  margin-top: 0;
 }
 
 #disqus_thread {
